@@ -5,6 +5,8 @@ cdebconf (0.55) UNRELEASED; urgency=low
       one question was added/removed to the stack of already seen
       questions.
     - Always display templates of type 'error'.
+    - Let debconf-loadtemplate exit with code 1 if it could not write
+      debconf databases.  Closes: #221879
 
   * Translations:
     - Eugen Meshcheryakov : added Ukrainian translation (uk.po)
